--- a/practicos entregados/desafios complementarios/DC1/di1.html
+++ b/practicos entregados/desafios complementarios/DC1/di1.html
@@ -8,9 +8,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>LA TIENDITA</h1>
-    <h2> DESAFÍO ENTREGABLE 1, Romina Barrionuevo.-</h2>
+    <h1>Hola soy Romina Barrionuevo</h1>
+    <h2> DESAFÍO COMPLEMENTARIO CLASE 3 CICLOS E ITERACIONES</h2>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
