--- a/index.html
+++ b/index.html
@@ -9,7 +9,56 @@
 </head>
 <body>
     <h1>LA TIENDITA</h1>
-    <h2> DESAFÍO ENTREGABLE 1, Romina Barrionuevo.-</h2>
+    <h2> Romina Barrionuevo.-</h2>
+    <h2>PRODUCTOS</h2>
+
+    <div class="card">
+        <img />
+        <div>
+          <h5>Remera</h5>
+          <p>
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#">Agregar al carrito</a>
+        </div>
+      </div>
+      <div class="card">
+        <img />
+        <div>
+          <h5>Pantalón</h5>
+          <p>
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#">Agregar al carrito</a>
+        </div>
+      </div>
+      <div class="card">
+        <img />
+        <div>
+          <h5>Vestido</h5>
+          <p>
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#">Agregar al carrito</a>
+        </div>
+      </div>
+      <div class="card">
+        <img />
+        <div>
+          <h5>Cartera</h5>
+          <p>
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#">Agregar al carrito</a>
+        </div>
+      </div>
+      <div class="card">
+        <img />
+        <div>
 
     <script src="./app.js"></script>
 </body>
